--- a/FoodLab/Base.lproj/Main.storyboard
+++ b/FoodLab/Base.lproj/Main.storyboard
@@ -119,5 +119,20 @@
             </objects>
             <point key="canvasLocation" x="956.52173913043487" y="111.68478260869566"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Kpr-FD-P7q">
+            <objects>
+                <viewController id="F6b-rc-W9T" customClass="DetailViewController" customModule="FoodLab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JOb-c1-tCY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="K4F-zD-ZJ2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oSA-TU-Mnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1841" y="116"/>
+        </scene>
     </scenes>
 </document>
