--- a/FoodLab/Base.lproj/Main.storyboard
+++ b/FoodLab/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ctU-df-Cx3">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--init-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="FoodLab" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,15 +25,16 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="init" id="qFp-KG-lRl"/>
                     <connections>
-                        <segue destination="2fr-6U-pNe" kind="show" identifier="loginSegue" id="lQM-YL-bGy"/>
+                        <segue destination="Nt5-iF-WLJ" kind="show" identifier="loginSegue" id="lQM-YL-bGy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="111.99400299850076"/>
+            <point key="canvasLocation" x="357.97101449275362" y="111.68478260869566"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Home-->
         <scene sceneID="IhO-Ef-26i">
             <objects>
                 <viewController storyboardIdentifier="SecondViewController" id="2fr-6U-pNe" customClass="SecondViewController" customModule="FoodLab" sceneMemberID="viewController">
@@ -85,7 +86,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="171"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc8-QM-Js8">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc8-QM-Js8">
                                                     <rect key="frame" x="12" y="179" width="177" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -107,6 +108,9 @@
                         <viewLayoutGuide key="safeArea" id="jcN-w8-OGo"/>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Home" id="1fv-Tp-WE8">
+                        <barButtonItem key="leftBarButtonItem" systemItem="search" id="A7M-2J-unY"/>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="F62-aZ-OtG" id="1Uq-0X-98i"/>
@@ -124,7 +128,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="956.52173913043487" y="111.68478260869566"/>
+            <point key="canvasLocation" x="1877" y="112"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="Kpr-FD-P7q">
@@ -147,7 +151,7 @@
                                 <state key="normal" title="back"/>
                                 <connections>
                                     <action selector="didTapBackButton:" destination="F6b-rc-W9T" eventType="touchUpInside" id="xMf-vc-H6c"/>
-                                    <segue destination="2fr-6U-pNe" kind="show" identifier="detailReturnMain" id="ig3-gc-a9s"/>
+                                    <segue destination="Nt5-iF-WLJ" kind="show" identifier="detailReturnMain" id="ig3-gc-a9s"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -160,7 +164,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oSA-TU-Mnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1841" y="116"/>
+            <point key="canvasLocation" x="2628" y="112"/>
+        </scene>
+        <!--initial-->
+        <scene sceneID="cIe-eh-ulp">
+            <objects>
+                <navigationController title="initial" automaticallyAdjustsScrollViewInsets="NO" id="ctU-df-Cx3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8E4-q2-egt">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="P4f-vh-a9S"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NZh-8e-Sys" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-468" y="112"/>
+        </scene>
+        <!--home-->
+        <scene sceneID="sjP-CZ-EsB">
+            <objects>
+                <navigationController title="home" automaticallyAdjustsScrollViewInsets="NO" id="Nt5-iF-WLJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xwn-mb-1EK">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2fr-6U-pNe" kind="relationship" relationship="rootViewController" id="D3R-7j-yPv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UAP-kK-z1v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1099" y="112"/>
         </scene>
     </scenes>
     <resources>
